# mud-puppy

./: .gitignore  AGENT_T_AUDIT.md  LICENSE  README.md  SESSION_NOTES.md  TRAINING_RUNBOOK.md  pyproject-jax.toml  pyproject.toml  requirements-jax.txt
bench/: throughput.py
benchmarks/: bench_int4_triton.py  bench_qlora_step.py
data/: build_reflib_dataset.py
docs/plans/: 2026-02-20-training-monitor-design.md  2026-02-20-training-monitor-impl.md  2026-04-28-kernel-anvil-training-impl.md  2026-04-28-kernel-anvil-training-kernels.md
docs/superpowers/plans/: 2026-04-21-mud-puppy-v0.4.md
docs/superpowers/specs/: 2026-04-21-mud-puppy-v0.4-design.md  2026-04-22-vulkan-analysis.md
lora_library/: __init__.py  batch_trainer.py  cli.py  config.py  datasets.py  evaluator.py  merger.py  registry.py  server.py
lora_library/configs/: assistant.yaml  coding.yaml  creative.yaml  math.yaml  translation_en_es.yaml
mud_puppy/: __init__.py  __main__.py  anvil_loader.py  anvil_runner.py  arch.py  bnb_rocm.py  cli.py  coder_sandbox.py  config.py  embedding.py  fp8_rocm.py  gguf_export.py  gptq_rocm.py  heretic_hook.py  int4_kernels.py  interactive.py  jax_config.py  jax_lora.py  jax_preference.py  jax_rl.py  jax_trainer.py  mistral_native_loader.py  model_loader.py  monitor.py  multimodal.py  mxfp4.py  mxfp4_experts.py  mxfp4_kernels.py  mxfp4_optim.py  mxfp4_rocm.py  mxfp4_train.py  packing.py  preference.py  qat_rocm.py  reward.py  rl.py  rl_verifier.py  rocm_attn.py  rocm_kernels.py  stream.py  (+3 more)
mud_puppy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mud_puppy/static/: dashboard.html
scripts/: README_CODER.md  README_REVIEWER.md  coder_grpo.py  coder_sft.py  extract_ministral_text.py  gguf_to_hf_gpt_oss.py  gpt_oss_train_chain.sh  heretic_auto.py  ingest_training_into_engram.py  mud-puppy-launch  reviewer_grpo.py  reviewer_sft.py  test_reviewer_grpo_data.py  trial_gpt_oss_qlora.py
scripts/heretic_reference/: README.md  native_abliterate_fallback.py
scripts/mi300x/: README.md  README_CUSTOM_IMAGE.md  README_FSDP.md  bake_golden_image.sh  download_checkpoints.sh  launch.sh  launch_from_image.sh  monitor.sh  requirements-pod.txt  setup_pod.sh  upload.sh
tests/: pressure_test.py  test_anvil_loader.py  test_arch.py  test_coder_sandbox.py  test_config.py  test_distributed.py  test_embedding_trainer.py  test_fp8.py  test_gguf_export.py  test_gptq.py  test_int4_kernels.py  test_model_loader.py  test_monitor.py  test_multimodal.py  test_mxfp4.py  test_mxfp4_experts.py  test_mxfp4_kernels.py  test_mxfp4_linear.py  test_mxfp4_optim.py  test_mxfp4_train.py  test_qat.py  test_rl_verifier.py  test_sequence_packing.py  test_stream_prefetch.py  test_zero_offload.py
tests/fixtures/: anvil_train_qwen3_mxfp4.json  anvil_train_wrong_schema.json
ui/: .gitignore  CMakeLists.txt  install-desktop.sh  manifest.toml
ui/src/: checkpoint_scan.cpp  checkpoint_scan.hpp  dataset_peek.cpp  dataset_peek.hpp  hf_client.cpp  hf_client.hpp  main.cpp  training_manager.cpp  training_manager.hpp  ws_bridge.cpp  ws_bridge.hpp
ui/web/: index.html  package-lock.json  package.json  vite.config.ts
ui/web/src/: App.tsx  ErrorBoundary.tsx  main.tsx
ui/web/src/chrome/: Background.tsx  BrandMark.tsx  VectorFrame.tsx  VectorWires.tsx
ui/web/src/lib/: format.ts  ipc-types.ts  ipc.ts  store.ts
ui/web/src/panels/: LoraHeatmap.tsx  LossChart.tsx  StreamingViz.tsx  Throughput.tsx  VramBar.tsx
ui/web/src/panes/: Launch.tsx  Library.tsx  Logs.tsx  Monitor.tsx  Runs.tsx
ui/web/src/styles/: index.css  tokens.css
