[project]
name = "mud-puppy"
version = "0.3.0"
description = "A ROCm-first LLM fine-tuning framework"
authors = [ { name = "LLM" } ]
requires-python = ">=3.9"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "peft",
    "trl",
]

[project.optional-dependencies]
# CUDA-specific extras (not required on ROCm)
cuda = [
    "auto-gptq",
]

# JAX/Flax backend (for TPU or JAX-based training)
jax = [
    "jax[cpu]",
    "flax",
    "optax",
    "orbax-checkpoint",
]

# JAX with CUDA support
jax-cuda = [
    "jax[cuda12]",
    "flax",
    "optax",
    "orbax-checkpoint",
]

# JAX with TPU support
jax-tpu = [
    "jax[tpu]",
    "flax",
    "optax",
    "orbax-checkpoint",
]

[project.scripts]
mud-puppy = "mud_puppy.cli:main"
mud-puppy-interactive = "mud_puppy.interactive:main"
