[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mud-puppy"
version = "0.4.0"
description = "A ROCm-first LLM fine-tuning framework"
authors = [ { name = "LLM" } ]
requires-python = ">=3.9"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "peft",
    "trl",
]

[project.optional-dependencies]
# CUDA-specific extras (not required on ROCm)
cuda = [
    "auto-gptq",
]

# JAX/Flax backend (for TPU or JAX-based training)
jax = [
    "jax[cpu]",
    "flax",
    "optax",
    "orbax-checkpoint",
]

# JAX with CUDA support
jax-cuda = [
    "jax[cuda12]",
    "flax",
    "optax",
    "orbax-checkpoint",
]

# JAX with TPU support
jax-tpu = [
    "jax[tpu]",
    "flax",
    "optax",
    "orbax-checkpoint",
]

# JAX QLoRA with qwix (requires manual install of qwix; not on PyPI)
# pip install mud-puppy[jax-qlora]
# then: pip install git+https://github.com/google/qwix.git
jax-qlora = [
    "jax[cpu]",
    "flax",
    "optax",
    "orbax-checkpoint",
    "qwix @ git+https://github.com/google/qwix.git",
]

# Training monitor (WebSocket server for mud-puppy-studio and legacy browser dashboard)
monitor = [
    "aiohttp>=3.9",
]

# Experiment tracking backends (optional; each is lazily imported at runtime)
logging-backends = [
    "wandb",
    "tensorboard",
]

# Multimodal / vision-language training
multimodal = [
    "Pillow",
]

[project.scripts]
mud-puppy = "mud_puppy.cli:main"
mud-puppy-interactive = "mud_puppy.interactive:main"

[tool.setuptools.packages.find]
include = ["mud_puppy*"]
